@@ -1,0 +1,60 @@
+<?php
+/***************************************************************
+*  Copyright notice
+*
+*  (c) 2010 Ingo Renner <ingo@typo3.org>
+*  All rights reserved
+*
+*  This script is part of the TYPO3 project. The TYPO3 project is
+*  free software; you can redistribute it and/or modify
+*  it under the terms of the GNU General Public License as published by
+*  the Free Software Foundation; either version 2 of the License, or
+*  (at your option) any later version.
+*
+*  The GNU General Public License can be found at
+*  http://www.gnu.org/copyleft/gpl.html.
+*
+*  This script is distributed in the hope that it will be useful,
+*  but WITHOUT ANY WARRANTY; without even the implied warranty of
+*  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+*  GNU General Public License for more details.
+*
+*  This copyright notice MUST APPEAR in all copies of the script!
+***************************************************************/
+
+
+/**
+ * A task that should be run regularly to determine the system's status.
+ *
+ * @author	Ingo Renner <ingo@typo3.org>
+ * @package TYPO3
+ * @subpackage reports
+ */
+class tx_reports_tasks_SystemStatusUpdateTask extends tx_scheduler_Task {
+
+	/**
+	 * Executes the System Status Update task, determing the highest severity of
+	 * status reports and saving that to the registry to be displayed at login
+	 * if necessary.
+	 *
+	 * @see typo3/sysext/scheduler/tx_scheduler_Task::execute()
+	 */
+	public function execute() {
+		$registry     = t3lib_div::makeInstance('t3lib_Registry');
+		$statusReport = t3lib_div::makeInstance('tx_reports_reports_Status');
+
+		$systemStatus    = $statusReport->getSystemStatus();
+		$highestSeverity = $statusReport->getHighestSeverity($systemStatus);
+
+		$registry->set('tx_reports', 'status.highestSeverity', $highestSeverity);
+
+		return true;
+	}
+}
+
+
+if (defined('TYPO3_MODE') && $TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/reports/tasks/class.tx_reports_tasks_systemstatusupdatetask.php'])	{
+	include_once($TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/reports/tasks/class.tx_reports_tasks_systemstatusupdatetask.php']);
+}
+
+?>
